--- a/ComparativeSetDistances/compare.ipynb
+++ b/ComparativeSetDistances/compare.ipynb
@@ -459,7 +459,8 @@
     "# ACTION ITEMS\n",
     "\n",
     "1. Look into why the straigh line distance tends to be greater than the track distance\n",
-    "2. Make sure that the TEL 2021 data entered into Oracle for stations: 032 (set 6) and 018 (set 16) are the correct values (i.e. not the manual entries)\n",
+    "2. Look into what happened to the `track distance` for sets 28 (CJC), 34 (CJC) and 54 (TEL)\n",
+    "3. Make sure that the TEL 2021 data entered into Oracle for stations: 032 (set 6) and 018 (set 16) are the correct values (i.e. not the manual entries)\n",
     "3. Look at historical data from oracle to see if the same pattern is true - i.e. that the manually entered distances tend to be less than the distances derived from the start / end coordinates of the tow."
    ],
    "metadata": {
