--- a/FishmanSolarPanels/solar-nico.ipynb
+++ b/FishmanSolarPanels/solar-nico.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "id": "2aed94bb0d86e17d",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "# Cost Analysis of the Installation of Solar Panels\n",
@@ -29,9 +26,6 @@
      "start_time": "2023-11-24T17:23:19.565448400Z"
     },
     "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -59,10 +53,7 @@
      "end_time": "2023-11-24T17:23:22.918813600Z",
      "start_time": "2023-11-24T17:23:22.505111600Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -80,8 +71,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "The current rates with NB Power are $0.12/kWh. In 30 years, assuming an annual increase of 3%, we would be looking at about $0.29/kWh. The rate of annual increase used is a conservative estimate.\n",
-      "\n"
+      "The current rates with NB Power are $0.12/kWh. In 30 years, assuming an annual increase of 3%, we would be looking at about $0.29/kWh. The rate of annual increase used is a conservative estimate.\n"
      ]
     }
    ],
@@ -118,10 +108,7 @@
      "end_time": "2023-11-24T17:23:23.252484200Z",
      "start_time": "2023-11-24T17:23:22.912830400Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -139,8 +126,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        Over a 30 year period, we can expect to spend approximately $151,775 on electricity. This is represented by the sum of the vertical lines in the above graph. Wow!\n",
-      "\n"
+      "        Over a 30 year period, we can expect to spend approximately $151,775 on electricity. This is represented by the sum of the vertical lines in the above graph. Wow!\n"
      ]
     }
    ],
@@ -170,10 +156,7 @@
    "cell_type": "markdown",
    "id": "e80a81cd8af907ed",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "# OK so that gives us the picture of the status quo... How do things change if we installed solar?\n",
@@ -183,7 +166,7 @@
     "\n",
     "They are proposing installing 30 x 400w solar panels on our roof, as shown below.\n",
     "\n",
-    "![alt text](ourhouse.png )\n",
+    "![alt text](house_nico.png )\n",
     "\n",
     "\n",
     "\n"
@@ -198,10 +181,7 @@
      "end_time": "2023-11-24T17:23:23.311481100Z",
      "start_time": "2023-11-24T17:23:23.250486500Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -211,8 +191,7 @@
       "\n",
       "Let's do a quick sanity check... If we do a quick back-of-the-napkin calculation, we can come up with our own estimate of annual energy generation which can be compared to what they are telling us is possible / realistic. \n",
       "\n",
-      "If we are installing a 15 kw (36 x 405w) system and if we assume that on average we'll get around 3 hours/day of sunlight, this gives us roughly 15,965 kWh/year. Therefore, their estimate of 16,875 kWh/year really does seem to be a conservative one. If we can on average less than 3 hours of sunlight/day, I don't want to know.\n",
-      "\n"
+      "If we are installing a 15 kw (36 x 405w) system and if we assume that on average we'll get around 3 hours/day of sunlight, this gives us roughly 15,965 kWh/year. Therefore, their estimate of 16,875 kWh/year really does seem to be a conservative one. If we can on average less than 3 hours of sunlight/day, I don't want to know.\n"
      ]
     }
    ],
@@ -237,10 +216,7 @@
      "end_time": "2023-11-24T17:23:23.604922600Z",
      "start_time": "2023-11-24T17:23:23.269485300Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -299,10 +275,7 @@
      "end_time": "2023-11-24T17:23:24.045405200Z",
      "start_time": "2023-11-24T17:23:23.599923200Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -487,10 +460,7 @@
    "cell_type": "markdown",
    "id": "c7721e944850c1e0",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "In the graph above, the break-even point for each scenario is where the curve crosses the x-axis.\n",
@@ -504,10 +474,7 @@
    "cell_type": "markdown",
    "id": "3cf3049674754671",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "How would a solar installation change the cost of energy for our household?"
@@ -522,10 +489,7 @@
      "end_time": "2023-11-24T17:23:24.408489200Z",
      "start_time": "2023-11-24T17:23:24.030299100Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -533,8 +497,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        Earlier we determined that over a 30 year period, we can expect to spend approximately $151,775 on electricity.  What are the new projections?\n",
-      "\n"
+      "        Earlier we determined that over a 30 year period, we can expect to spend approximately $151,775 on electricity.  What are the new projections?\n"
      ]
     },
     {
@@ -552,8 +515,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        With the expected energy production of 16,875 kWh, we can expect to spend approximately $53,267 on electricity over the same 30 year period. \n",
-      "\n"
+      "        With the expected energy production of 16,875 kWh, we can expect to spend approximately $53,267 on electricity over the same 30 year period. \n"
      ]
     }
    ],
@@ -590,10 +552,7 @@
      "end_time": "2023-11-24T17:23:24.496653200Z",
      "start_time": "2023-11-24T17:23:24.407489300Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -601,8 +560,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "So by installing a solar system, there is a potential for approximately $59,231 of savings over a 30 year period. Instead of $151,775, we would only be paying $53,267, plus the cost of the investment (we'll use $39,277). This estimate of savings is corroborated by the graph above, showing projected earnings from energy production.\n",
-      "\n"
+      "So by installing a solar system, there is a potential for approximately $59,231 of savings over a 30 year period. Instead of $151,775, we would only be paying $53,267, plus the cost of the investment (we'll use $39,277). This estimate of savings is corroborated by the graph above, showing projected earnings from energy production.\n"
      ]
     }
    ],
@@ -618,10 +576,7 @@
    "cell_type": "markdown",
    "id": "92bcd3a03fe2e02f",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "Finally, it would be nice to look at what this project would do to our monthly cash flow. \n",
@@ -640,10 +595,7 @@
      "end_time": "2023-11-24T17:23:25.058117600Z",
      "start_time": "2023-11-24T17:23:24.429656400Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -661,8 +613,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Assuming an annual interest rate of 0% and an amortization period of 120 months (10 x 12 months), we are looking at a monthly payment of $269. This effectively doubles our monthly energy payments for about 10 years, after which, the price will fall dramatically to a small fraction of the status quo. \n",
-      "\n"
+      "Assuming an annual interest rate of 0% and an amortization period of 120 months (10 x 12 months), we are looking at a monthly payment of $269. This effectively doubles our monthly energy payments for about 10 years, after which, the price will fall dramatically to a small fraction of the status quo. \n"
      ]
     }
    ],
