--- a/FishmanSolarPanels/solar-nico.ipynb
+++ b/FishmanSolarPanels/solar-nico.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "id": "2aed94bb0d86e17d",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "# Cost Analysis of the Installation of Solar Panels\n",
@@ -18,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -26,6 +29,9 @@
      "start_time": "2023-11-24T17:23:19.565448400Z"
     },
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -46,14 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "id": "3f2c57c57d24435b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-24T17:23:22.918813600Z",
      "start_time": "2023-11-24T17:23:22.505111600Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -71,7 +80,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "The current rates with NB Power are $0.12/kWh. In 30 years, assuming an annual increase of 3%, we would be looking at about $0.29/kWh. The rate of annual increase used is a conservative estimate.\n"
+      "The current rates with NB Power are $0.12/kWh. In 30 years, assuming an annual increase of 3%, we would be looking at about $0.29/kWh. The rate of annual increase used is a conservative estimate.\n",
+      "\n"
      ]
     }
    ],
@@ -101,14 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "id": "6ba547cabf13a3f5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-24T17:23:23.252484200Z",
      "start_time": "2023-11-24T17:23:22.912830400Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -126,7 +139,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        Over a 30 year period, we can expect to spend approximately $151,775 on electricity. This is represented by the sum of the vertical lines in the above graph. Wow!\n"
+      "        Over a 30 year period, we can expect to spend approximately $151,775 on electricity. This is represented by the sum of the vertical lines in the above graph. Wow!\n",
+      "\n"
      ]
     }
    ],
@@ -156,7 +170,10 @@
    "cell_type": "markdown",
    "id": "e80a81cd8af907ed",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "# OK so that gives us the picture of the status quo... How do things change if we installed solar?\n",
@@ -174,14 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "id": "94a3274c0ab29285",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-24T17:23:23.311481100Z",
      "start_time": "2023-11-24T17:23:23.250486500Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -191,7 +211,10 @@
       "\n",
       "Let's do a quick sanity check... If we do a quick back-of-the-napkin calculation, we can come up with our own estimate of annual energy generation which can be compared to what they are telling us is possible / realistic. \n",
       "\n",
-      "If we are installing a 15 kw (36 x 405w) system and if we assume that on average we'll get around 3 hours/day of sunlight, this gives us roughly 15,965 kWh/year. Therefore, their estimate of 16,875 kWh/year really does seem to be a conservative one. If we can on average less than 3 hours of sunlight/day, I don't want to know.\n"
+      "If we are installing a 15 kw (36 x 405w) system and if we assume that on average we'll get around 3 hours/day of sunlight, this gives us roughly 15,965 kWh/year. \n",
+      "\n",
+      "Therefore, their estimate of 16,875 kWh/year is a little bit less conservative than mine; it's assuming 3.1709791983764584 hours of operation per day\n",
+      "\n"
      ]
     }
    ],
@@ -199,24 +222,31 @@
     "system_rating = 36 * (405 / 1000)  # as per quote\n",
     "avg_sunlight_per_day = 3  # hours\n",
     "annual_production_estimate_david = system_rating * 3 * 365  # kwh\n",
-    "annual_production_estimate = 16875  # kwh as a conservative estimate\n",
+    "annual_production_estimate = 16875 \n",
+    "actual_hours = annual_production_estimate/ (system_rating *365)\n",
+    "\n",
     "print(f\"\"\"\n",
     "Let's do a quick sanity check... If we do a quick back-of-the-napkin calculation, we can come up with our own estimate of annual energy generation which can be compared to what they are telling us is possible / realistic. \n",
     "\n",
-    "If we are installing a {round(system_rating)} kw (36 x 405w) system and if we assume that on average we'll get around {avg_sunlight_per_day} hours/day of sunlight, this gives us roughly {round(annual_production_estimate_david):,} kWh/year. Therefore, their estimate of {round(annual_production_estimate):,} kWh/year really does seem to be a conservative one. If we can on average less than {avg_sunlight_per_day} hours of sunlight/day, I don't want to know.\n",
+    "If we are installing a {round(system_rating)} kw (36 x 405w) system and if we assume that on average we'll get around {avg_sunlight_per_day} hours/day of sunlight, this gives us roughly {round(annual_production_estimate_david):,} kWh/year. \n",
+    "\n",
+    "Therefore, their estimate of {round(annual_production_estimate):,} kWh/year is a little bit less conservative than mine; it's assuming {actual_hours} hours of operation per day\n",
     "\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "id": "4e474d2c8f944f77",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-24T17:23:23.604922600Z",
      "start_time": "2023-11-24T17:23:23.269485300Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -268,14 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 63,
    "id": "adbc729b1c55dc9a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-24T17:23:24.045405200Z",
      "start_time": "2023-11-24T17:23:23.599923200Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -404,7 +437,7 @@
        "19     6756.845901   11756.845901   19672.845901  2042"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +493,10 @@
    "cell_type": "markdown",
    "id": "c7721e944850c1e0",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "In the graph above, the break-even point for each scenario is where the curve crosses the x-axis.\n",
@@ -474,7 +510,10 @@
    "cell_type": "markdown",
    "id": "3cf3049674754671",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "How would a solar installation change the cost of energy for our household?"
@@ -482,14 +521,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 64,
    "id": "3b867f90d7d36221",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-24T17:23:24.408489200Z",
      "start_time": "2023-11-24T17:23:24.030299100Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -497,7 +539,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        Earlier we determined that over a 30 year period, we can expect to spend approximately $151,775 on electricity.  What are the new projections?\n"
+      "        Earlier we determined that over a 30 year period, we can expect to spend approximately $151,775 on electricity.  What are the new projections?\n",
+      "\n"
      ]
     },
     {
@@ -515,7 +558,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        With the expected energy production of 16,875 kWh, we can expect to spend approximately $53,267 on electricity over the same 30 year period. \n"
+      "        With the expected energy production of 16,875 kWh, we can expect to spend approximately $53,267 on electricity over the same 30 year period. \n",
+      "\n"
      ]
     }
    ],
@@ -545,14 +589,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 65,
    "id": "20a53067ed92f2b8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-24T17:23:24.496653200Z",
      "start_time": "2023-11-24T17:23:24.407489300Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -560,7 +607,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "So by installing a solar system, there is a potential for approximately $59,231 of savings over a 30 year period. Instead of $151,775, we would only be paying $53,267, plus the cost of the investment (we'll use $39,277). This estimate of savings is corroborated by the graph above, showing projected earnings from energy production.\n"
+      "So by installing a solar system, there is a potential for approximately $59,231 of savings over a 30 year period. Instead of $151,775, we would only be paying $53,267, plus the cost of the investment (we'll use $39,277). This estimate of savings is corroborated by the graph above, showing projected earnings from energy production.\n",
+      "\n"
      ]
     }
    ],
@@ -576,7 +624,10 @@
    "cell_type": "markdown",
    "id": "92bcd3a03fe2e02f",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "Finally, it would be nice to look at what this project would do to our monthly cash flow. \n",
@@ -588,14 +639,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "id": "e166b1de81f7c678",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-24T17:23:25.058117600Z",
      "start_time": "2023-11-24T17:23:24.429656400Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -613,7 +667,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Assuming an annual interest rate of 0% and an amortization period of 120 months (10 x 12 months), we are looking at a monthly payment of $269. This effectively doubles our monthly energy payments for about 10 years, after which, the price will fall dramatically to a small fraction of the status quo. \n"
+      "Assuming an annual interest rate of 0% and an amortization period of 120 months (10 x 12 months), we are looking at a monthly payment of $269. This effectively doubles our monthly energy payments for about 10 years, after which, the price will fall dramatically to a small fraction of the status quo. \n",
+      "\n"
      ]
     }
    ],
